--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,38 @@
     transform: rotate(360deg);
   }
 }
+
+.contact-list {
+  font-size: 18px;
+  text-align: left;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 1024px;
+}
+
+.contact-list-row {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px white solid;
+}
+
+.contact-list-buttons {
+  padding: 10px;
+  margin: 0;
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact-editor {
+  position: absolute;
+  width: 400px;
+  top: calc(50% - 200px);
+  left: calc(50% - 200px);
+  background-color: white;
+  border: 2px solid #000;
+  box-shadow: 1px 1xp;
+  padding: 10px;
+}
